--- a/ImportDataRowExcel.xaml
+++ b/ImportDataRowExcel.xaml
@@ -1,4 +1,4 @@
-<Activity mc:Ignorable="sap sap2010" x:Class="AddDataRow" mva:VisualBasic.Settings="{x:Null}" sap:VirtualizedContainerService.HintSize="1240,711" sap2010:WorkflowViewState.IdRef="AddDataRow_1" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:av="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:mva="clr-namespace:Microsoft.VisualBasic.Activities;assembly=System.Activities" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib" xmlns:sd="clr-namespace:System.Data;assembly=System.Data" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+<Activity mc:Ignorable="sap sap2010" x:Class="AddDataRow" mva:VisualBasic.Settings="{x:Null}" sap:VirtualizedContainerService.HintSize="958,711" sap2010:WorkflowViewState.IdRef="AddDataRow_1" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:av="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:mva="clr-namespace:Microsoft.VisualBasic.Activities;assembly=System.Activities" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib" xmlns:sd="clr-namespace:System.Data;assembly=System.Data" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="56">
       <x:String>System.Activities</x:String>
@@ -62,12 +62,17 @@
       <AssemblyReference>System.ComponentModel.Composition</AssemblyReference>
       <AssemblyReference>System.ServiceModel</AssemblyReference>
       <AssemblyReference>NPOI</AssemblyReference>
+      <AssemblyReference>System.Runtime.WindowsRuntime</AssemblyReference>
     </scg:List>
   </TextExpression.ReferencesForImplementation>
   <Flowchart sap:VirtualizedContainerService.HintSize="706,646" sap2010:WorkflowViewState.IdRef="Flowchart_1">
     <Flowchart.Variables>
       <Variable x:TypeArguments="sd:DataTable" Name="dtPrimary" />
-      <Variable x:TypeArguments="x:Int32" Default="1" Name="TransationNumber" />
+      <Variable x:TypeArguments="x:Int32" Name="TransationNumber">
+        <Variable.Default>
+          <Literal x:TypeArguments="x:Int32" />
+        </Variable.Default>
+      </Variable>
       <Variable x:TypeArguments="sd:DataTable" Name="dtSecondary" />
     </Flowchart.Variables>
     <sap:WorkflowViewStateService.ViewState>
@@ -90,7 +95,7 @@
           <av:PointCollection x:Key="ConnectorLocation">300,203.5 300,256.5</av:PointCollection>
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
-      <Sequence DisplayName="AddDataRow" sap:VirtualizedContainerService.HintSize="265,76" sap2010:WorkflowViewState.IdRef="Sequence_2">
+      <Sequence DisplayName="AddDataRow" sap:VirtualizedContainerService.HintSize="376,309" sap2010:WorkflowViewState.IdRef="Sequence_2">
         <sap:WorkflowViewStateService.ViewState>
           <scg:Dictionary x:TypeArguments="x:String, x:Object">
             <x:Boolean x:Key="IsExpanded">False</x:Boolean>
@@ -108,7 +113,10 @@
         </Assign>
       </Sequence>
       <FlowStep.Next>
-        <FlowDecision x:Name="__ReferenceID0" Condition="[dtPrimary.Rows.Count &gt;= TransationNumber]" DisplayName="count&gt;=trx" sap:VirtualizedContainerService.HintSize="70,87" sap2010:WorkflowViewState.IdRef="FlowDecision_1">
+        <FlowDecision x:Name="__ReferenceID0" DisplayName="count&gt;=trx" sap:VirtualizedContainerService.HintSize="70,87" sap2010:WorkflowViewState.IdRef="FlowDecision_1">
+          <FlowDecision.Condition>
+            <mva:VisualBasicValue x:TypeArguments="x:Boolean" ExpressionText="dtPrimary.Rows.Count &gt; TransationNumber" />
+          </FlowDecision.Condition>
           <sap:WorkflowViewStateService.ViewState>
             <scg:Dictionary x:TypeArguments="x:String, x:Object">
               <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -127,9 +135,9 @@
                   <av:PointCollection x:Key="ConnectorLocation">272.5,410 300,410 300,343.5</av:PointCollection>
                 </scg:Dictionary>
               </sap:WorkflowViewStateService.ViewState>
-              <Sequence DisplayName="Get Data Row And Add To New Table" sap:VirtualizedContainerService.HintSize="551,1169" sap2010:WorkflowViewState.IdRef="Sequence_3">
+              <Sequence DisplayName="Get Data Row And Add To New Table" sap:VirtualizedContainerService.HintSize="265,76" sap2010:WorkflowViewState.IdRef="Sequence_3">
                 <Sequence.Variables>
-                  <Variable x:TypeArguments="sd:DataRow" Name="in_TransactionItem" />
+                  <Variable x:TypeArguments="sd:DataRow" Name="GetDataRow" />
                   <Variable x:TypeArguments="sd:DataRow" Name="NewDataRow" />
                 </Sequence.Variables>
                 <sap:WorkflowViewStateService.ViewState>
@@ -139,10 +147,10 @@
                 </sap:WorkflowViewStateService.ViewState>
                 <Assign sap:VirtualizedContainerService.HintSize="509,70" sap2010:WorkflowViewState.IdRef="Assign_1">
                   <Assign.To>
-                    <OutArgument x:TypeArguments="sd:DataRow">[in_TransactionItem]</OutArgument>
+                    <OutArgument x:TypeArguments="sd:DataRow">[GetDataRow]</OutArgument>
                   </Assign.To>
                   <Assign.Value>
-                    <InArgument x:TypeArguments="sd:DataRow">[dtPrimary.Rows(TransationNumber-1)]</InArgument>
+                    <InArgument x:TypeArguments="sd:DataRow">[dtPrimary.Rows(TransationNumber)]</InArgument>
                   </Assign.Value>
                 </Assign>
                 <Assign sap:VirtualizedContainerService.HintSize="509,70" sap2010:WorkflowViewState.IdRef="Assign_5">
@@ -153,7 +161,7 @@
                     <InArgument x:TypeArguments="sd:DataRow">[dtSecondary.NewRow()]</InArgument>
                   </Assign.Value>
                 </Assign>
-                <If Condition="[in_TransactionItem(&quot;Status&quot;).ToString.Contains(&quot;Done&quot;)]" sap:VirtualizedContainerService.HintSize="509,737" sap2010:WorkflowViewState.IdRef="If_1">
+                <If Condition="[GetDataRow(&quot;Status&quot;).ToString.Contains(&quot;Done&quot;)]" sap:VirtualizedContainerService.HintSize="509,737" sap2010:WorkflowViewState.IdRef="If_1">
                   <If.Then>
                     <Sequence sap:VirtualizedContainerService.HintSize="473,540" sap2010:WorkflowViewState.IdRef="Sequence_5">
                       <sap:WorkflowViewStateService.ViewState>
@@ -169,7 +177,7 @@
                                 <OutArgument x:TypeArguments="x:Object">[NewDataRow("Name")]</OutArgument>
                               </ui:AssignOperation.To>
                               <ui:AssignOperation.Value>
-                                <InArgument x:TypeArguments="x:Object">[in_TransactionItem("Name").ToString.Substring(0,2)]</InArgument>
+                                <InArgument x:TypeArguments="x:Object">[GetDataRow("Name").ToString.Substring(0,2)]</InArgument>
                               </ui:AssignOperation.Value>
                             </ui:AssignOperation>
                             <ui:AssignOperation sap2010:WorkflowViewState.IdRef="AssignOperation_2">
@@ -177,7 +185,7 @@
                                 <OutArgument x:TypeArguments="x:Object">[NewDataRow("Age")]</OutArgument>
                               </ui:AssignOperation.To>
                               <ui:AssignOperation.Value>
-                                <InArgument x:TypeArguments="x:Object">[in_TransactionItem("Age").ToString]</InArgument>
+                                <InArgument x:TypeArguments="x:Object">[GetDataRow("Age").ToString]</InArgument>
                               </ui:AssignOperation.Value>
                             </ui:AssignOperation>
                             <ui:AssignOperation sap2010:WorkflowViewState.IdRef="AssignOperation_3">
@@ -185,7 +193,7 @@
                                 <OutArgument x:TypeArguments="x:Object">[NewDataRow("Department")]</OutArgument>
                               </ui:AssignOperation.To>
                               <ui:AssignOperation.Value>
-                                <InArgument x:TypeArguments="x:Object">[in_TransactionItem("Department").ToString]</InArgument>
+                                <InArgument x:TypeArguments="x:Object">[GetDataRow("Department").ToString]</InArgument>
                               </ui:AssignOperation.Value>
                             </ui:AssignOperation>
                             <ui:AssignOperation sap2010:WorkflowViewState.IdRef="AssignOperation_4">
@@ -193,7 +201,7 @@
                                 <OutArgument x:TypeArguments="x:Object">[NewDataRow("Status")]</OutArgument>
                               </ui:AssignOperation.To>
                               <ui:AssignOperation.Value>
-                                <InArgument x:TypeArguments="x:Object">["Suucessful"]</InArgument>
+                                <InArgument x:TypeArguments="x:Object">["Success"]</InArgument>
                               </ui:AssignOperation.Value>
                             </ui:AssignOperation>
                           </scg:List>
